[package]
name = "updown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.3"
clap = "4.1.3"
git-version = "0.3.5"
serde = { version = "1.0.152", features = ["derive"] }
sqlite = "0.30.3"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
